--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "linkedlist",
-  "version": "1.0.0",
+  "name": "doubly-linked-list",
+  "version": "0.0.1",
+  "description": "Implements doubly linked list interface.",
   "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.4"
+  "directories": {
+    "test": "test"
   },
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha"
+  },
+  "keywords": [
+    "doubly",
+    "linked",
+    "list"
+  ],
+  "author": "Adarsh",
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.5",
+    "lodash.isequal": "^4.5.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^1.0.0",
+    "mocha": "^5.0.5",
+    "nyc": "^11.4.0"
   }
 }
